# jazzy_swarm_ws

./: Dockerfile  README.md  entrypoint.sh  run_swarm.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: hardware_optimization.md  vfh_gps_spec.md  zero_copy_architecture.md
src/swarm_core/: CMakeLists.txt  README.md  package.xml
src/swarm_core/config/: fastdds.xml
src/swarm_core/launch/: sim_alpha.launch.py  sim_swarm.launch.py  swarm_brain.launch.py  virtual_swarm.launch.py
src/swarm_core/rviz/: mapper.rviz
src/swarm_core/scripts/: build_stratford.py
src/swarm_core/src/: boid_controller.cpp  boids_node.cpp  camera_node.cpp  core_bridge_node.cpp  supervisor_node.cpp  swarm_monitor_node.cpp  visual_cortex.cpp
src/swarm_core/urdf/: drone.urdf.xacro
src/swarm_core/worlds/: stratford_olympic_park.sdf  stratford_synthetic.sdf  swarm_world.sdf
src/swarm_interfaces/: CMakeLists.txt  package.xml
src/swarm_interfaces/msg/: ZeroCopyFrame.msg
