<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_core</name>
  <version>0.0.1</version>
  <description>Zero-Copy Edge Compute Swarm</description>
  <maintainer email="architect@tech-nation.uk">Lead Architect</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>swarm_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
